--- a/order-dev.yml
+++ b/order-dev.yml
@@ -8,6 +8,11 @@ spring:
     url: jdbc:mysql://192.168.88.175:3306/SpringCloud_Sell?characterEncoding=utf8&useSSL=true
   jpa:
     show-sql: true
+  rabbitmq:
+    host: 192.168.88.175
+    port: 5672
+    username: root
+    password: root
 # eureka:
 #   client:
 #     service-url:
