--- a/order.yml
+++ b/order.yml
@@ -12,5 +12,5 @@ spring:
 #   client:
 #     service-url:
 #       defaultZone: http://localhost:8761/eureka/
-server:
-  port: 7001
+# server:
+#   port: 7001
