--- a/product-dev.yml
+++ b/product-dev.yml
@@ -8,5 +8,10 @@ spring:
     url: jdbc:mysql://192.168.88.175:3306/SpringCloud_Sell?characterEncoding=utf8&useSSL=true
   jpa:
     show-sql: true
+  rabbitmq:
+    host: 192.168.88.175
+    port: 5672
+    username: root
+    password: root
 server:
   port: 7002
