--- a/order-dev.yml
+++ b/order-dev.yml
@@ -13,6 +13,9 @@ spring:
     port: 5672
     username: root
     password: root
+  redis:
+    host: 192.168.88.175
+    port: 6379
 # eureka:
 #   client:
 #     service-url:
