--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -1,2 +1,9 @@
 server:
   port: 7009
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
