--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -15,6 +15,7 @@ zuul:
 #      serviceId: product
   #简洁写法
     product: /myProduct/**
+  #排除某些路由
   ignored-patterns:
     - /**/product/listForOrder
 management:
