--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -9,7 +9,7 @@ hystrix:
             timeoutInMilliseconds: 60000
 zuul:
   #全部服务忽略敏感头（全部服务都可传递cookie）
-  #sensitive-headers: 
+  sensitive-headers: 
   routes:
     #/myProduct/product/list -> /product/product/list
         myProduct:
