--- a/order.yml
+++ b/order.yml
@@ -14,3 +14,7 @@ spring:
 #       defaultZone: http://localhost:8761/eureka/
 # server:
 #   port: 7001
+#修改负载均衡策略
+  ##PRODUCT:
+  ##  ribbon:
+  ##    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
