--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -23,8 +23,8 @@ zuul:
     #简洁写法
     #product: /myProduct/**
   #排除某些路由
-  ignored-patterns:
-    - /**/product/listForOrder
+#   ignored-patterns:
+#     - /**/product/listForOrder
 management:
   security:
     enabled: false
