--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -7,9 +7,9 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 60000
-# ribbon:
-#   ReadTimeout: 6000
-#   SocketTimeout: 6000
+ribbon:
+  ReadTimeout: 6000
+  SocketTimeout: 6000
 zuul:
   #全部服务忽略敏感头（全部服务都可传递cookie）
   sensitive-headers: 
@@ -23,8 +23,8 @@ zuul:
     #简洁写法
     #product: /myProduct/**
   #排除某些路由
-#   ignored-patterns:
-#     - /**/product/listForOrder
+  ignored-patterns:
+    - /**/product/listForOrder
 management:
   security:
     enabled: false
