--- a/order-dev.yml
+++ b/order-dev.yml
@@ -26,3 +26,10 @@ env: dev
 girl: 
   name: lili
   age: 19
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: basic
